Add bookCache